# light-cut-soundz

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src-tauri/src/ops/: fade.rs  filter.rs  mod.rs  normalize.rs  speed.rs  trim.rs
