[package]
name = "lightcutsoundz"
version = "0.1.0"
edition = "2021"

[lib]
name = "soundz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
hound = "3"
rubato = "0.15"
anyhow = "1"
tempfile = "3"
